--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
-    "i18next": "^25.3.0",
+    "i18next": "^23.4.9",
     "i18next-browser-languagedetector": "^8.2.0",
     "ionicons": "^8.0.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.5.3",
+    "react-i18next": "^13.0.0",
     "react-icons": "^5.5.0",
     "react-ion-icon": "^4.0.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
